<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensehat_ros</name>
  <version>0.0.0</version>
  <description>ROS 2 package for RPi/AstroPi Sense HAT</description>
  <maintainer email="adityakamath@live.com">Aditya Kamath</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>tf_transformations</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
